# tars-legacy

./: .dockerignore  .env.example  .gitignore  deploy.sh  docker-compose.local.yml  docker-compose.yml  environment.py  main.py  order_formula.md  pyproject.toml  ruff.toml
api/: app.py  authorization.py  dependencies.py
bot/: __main__.py  app.py  db.py  keyboards.py  logging_config.py
common/: bot.py  db.py  environment.py  i18n.py  log_context.py  logging_config.py  money.py  packages.py  redis.py
dispatcher/: __main__.py
docker/: Dockerfile
entrypoints/: api.py  bot.py  dispatcher.py  offer_expirer.py
migrations/: 001_aiogram_fsm.sql  002_user_profiles.sql  003_orders.sql  004_drop_aiogram_fsm.sql  005_order_offers.sql  006_order_lifecycle.sql  007_user_profile_surrogate_id.sql  008_orders_active_fanout_idx.sql  009_order_external_status.sql  010_order_is_only_w_codes.sql  011_user_profile_pack_prices.sql  012_user_profile_tier.sql  013_user_profile_chat_addable.sql  014_money_decimal.sql  015_transactions.sql  016_user_profile_required_fields.sql  017_order_timed_out_status.sql  018_order_refusal_reason.sql  019_orders_active_fanout_amount_idx.sql  020_transactions_per_order.sql  021_order_public_id.sql
offer_expirer/: __main__.py
scheduler/: __main__.py  app.py  dispatch.py
scripts/: backfill_online_price_index.py  backfill_pending_orders.py  backfill_rating.py  compile_locales.sh  seed_code_order_price.py  seed_user_roles.py
tests/: test_external_order_api.py  test_offer_expiry.py  test_order_fanout.py  test_order_ranking.py  test_tiers.py  (+1 more)
(+103 files in other folders)
