[project]
name = "task-py-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram[i18n]>=3.28.2",
    "asyncpg>=0.31.0",
    "colorlog>=6.9.0",
    "python-dotenv>=1.2.2",
    "redis>=5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]
