[project]
name = "task-py-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram[i18n]>=3.28.2",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "colorlog>=6.9.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "python-json-logger>=3",
    "redis>=5.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
